<resources>
    <string name="app_name">MarkIt</string>
    <string name="action_settings">Settings</string>
    <string name="login">登 录</string>
    <string name="register">注册</string>
    <string name="email">邮箱</string>
    <string name="password">密码</string>
    <string name="rememberMe">记住我</string>
    <string name="forgetPassword">忘记密码</string>
    <string name="ensurePassword">确认密码</string>
    <string name="newPassword">新密码</string>
    <string name="ensure">确定</string>

    <string name="open">打开</string>
    <string name="close">关闭</string>

    <string name="net_available">网络已连接</string>
    <string name="net_unAvailable">网络未连接</string>

    <string name="username_null">请输入邮箱</string>
    <string name="password_null">请输入密码</string>
    <string name="newPassword_null">请输入新密码</string>
    <string name="ensurePassword_null">请输入确认密码</string>
    <string name="password_different">密码输入不一致</string>

    <string name="hint_input_content">请输入内容...</string>
    <string name="contacts">联系人</string>
    <string name="add">添加</string>
    <string name="cancel">取消</string>
    <string name="select_contact">请选择联系人</string>

    <string name="add_icon">"+"</string>

    <string name="pleaseInputNewContact">请输入新增联系人姓名</string>

    <string name="string_add_note">添加笔记</string>
    <string name="string_save_note">保存笔记</string>


    <!-- Test User by kasper 16.4.21-->
    <string-array name="bmob_user_list">
        <item>1. 注册用户</item>
        <item>2. 登陆用户</item>
        <item>3. 获取本地用户</item>
        <item>4. 退出登陆</item>
        <item>5. 更新用户</item>
        <item>6. 验证密码</item>
        <item>7. 邮箱重置旧密码</item>
        <item>8. 验证邮件</item>
        <item>9. 查询用户</item>
        <item>10.通过邮箱和密码登陆</item>
        <item>11.修改当前用户密码</item>
    </string-array>

    <!-- Test User by kasper 16.5.22-->
    <string-array name="bmob_contact_list">
        <item>1. 新建联系人</item>
        <item>2. 编辑联系人</item>
        <item>3. 删除联系人</item>
        <item>4. 新建文字笔记</item>
        <item>5. 添加图片</item>
    </string-array>
</resources>
