<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
   >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/register_email_text"
            android:layout_marginLeft="2dp"
            android:text="@string/email"
            android:textColor="@color/white"
            android:textSize="20sp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/register_email_edit"
            android:singleLine="true"
            android:layout_below="@+id/register_email_text"
            android:layout_marginTop="1dp"
            android:textColor="@color/white"
            android:theme="@style/Theme.App.Base"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/register_password_text"
            android:layout_marginLeft="2dp"
            android:text="@string/password"
            android:textColor="@color/white"
            android:textSize="20sp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/register_password_edit"
            android:password="true"
            android:singleLine="true"
            android:layout_below="@+id/register_password_text"
            android:layout_marginTop="1dp"
            android:textColor="@color/white"
            android:theme="@style/Theme.App.Base"
            /><!--theme=@style/Theme.App.Base 自定义EditText的背景线为白色-->
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/register_ensure_password_text"
            android:layout_marginLeft="2dp"
            android:text="@string/ensurePassword"
            android:textColor="@color/white"
            android:textSize="20sp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/register_ensure_password_edit"
            android:password="true"
            android:singleLine="true"
            android:layout_below="@+id/register_ensure_password_text"
            android:layout_marginTop="1dp"
            android:textColor="@color/white"
            android:theme="@style/Theme.App.Base"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        >
        <Button
            android:layout_width="match_parent"
            android:layout_height="31dp"
            android:id="@+id/register_down"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/register"
            android:textColor="@color/white"
            android:background="@drawable/roundbuttonshape"
            android:textSize="25sp"/>

    </RelativeLayout>

</LinearLayout>