<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <!--
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="100dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/login_up"
            android:layout_marginLeft="2dp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="20sp"/>
        <View
            android:layout_width="45dp"
            android:layout_height="4dp"
            android:background="@color/lightGreen"
            android:layout_below="@+id/login_up"
            android:layout_marginTop="3dp"/>
        <View
            android:layout_width="1dp"
            android:layout_height="26dp"
            android:id="@+id/login_view_line"
            android:background="@color/view_gray"
            android:layout_toRightOf="@+id/login_up"
            android:layout_marginLeft="8dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/login_view_line"
            android:layout_marginLeft="8dp"
            android:text="@string/register"
            android:textColor="@color/text_gray"
            android:textSize="18sp"/>
    </RelativeLayout>
    -->
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/login_email_text"
            android:layout_marginLeft="2dp"
            android:text="@string/email"
            android:textColor="@color/white"
            android:textSize="20sp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/login_email_edit"
            android:singleLine="true"
            android:layout_below="@+id/login_email_text"
            android:layout_marginTop="1dp"
            android:textColor="@color/white"
            android:theme="@style/Theme.App.Base"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/login_password_text"
            android:layout_marginLeft="2dp"
            android:text="@string/password"
            android:textColor="@color/white"
            android:textSize="20sp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/login_password_edit"
            android:password="true"
            android:singleLine="true"
            android:layout_below="@+id/login_password_text"
            android:layout_marginTop="1dp"
            android:textColor="@color/white"
            android:theme="@style/Theme.App.Base"
            /><!--theme=@style/Theme.App.Base 自定义EditText的背景线为白色-->
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="45dp">
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/login_checkBox"
            android:checked="true"
            android:buttonTint="@color/white"
           /><!--buttonTint设置checkBox方框背景为白色-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/login_rememberMe"
            android:layout_toRightOf="@id/login_checkBox"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/rememberMe"
            android:textColor="#ffffff"
            android:textSize="19sp"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        >
        <Button
            android:layout_width="match_parent"
            android:layout_height="31dp"
            android:id="@+id/login_down"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/login"
            android:textColor="@color/white"
            android:background="@drawable/roundbuttonshape"
            android:textSize="25sp"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp">
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/lightGreen"
            android:id="@+id/login_view_line_bottom"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:id="@+id/login_forget_password"
            android:layout_below="@+id/login_view_line_bottom"
            android:layout_centerHorizontal="true"
            android:text="@string/forgetPassword"
            android:textColor="@color/white"
            android:textSize="19sp"
            android:clickable="true"/>
    </RelativeLayout>
</LinearLayout>