<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ui.AddNoteActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:orientation="vertical"
        android:id="@+id/linearLayout"
        android:background="@color/white"
        android:layout_alignParentBottom="true">`
        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:id="@+id/editText"
            android:hint="@string/hint_input_content"
            android:textColorHint="@color/text_gray"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textAlignment="textStart"
            android:gravity="start"
            android:background="@color/white"
            android:textCursorDrawable="@drawable/cursor_style"
            />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:id="@+id/imageView1"
                android:visibility="gone"
                android:clickable="true"/>
            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:id="@+id/imageView2"
                android:visibility="gone"
                android:clickable="true"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:background="@color/view_gray"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp">
            <TextView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="6dp"
                android:id="@+id/contact_icon"
                android:textSize="20sp"
                android:background="@drawable/contacts_icon1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_toRightOf="@+id/contact_icon"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="8dp"
                android:id="@+id/contact"
                android:text="联系人"
                android:textSize="18sp"
                android:textColor="@color/black"
                />
            <TextView
                android:layout_width="40dp"
                android:layout_height="35dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:layout_marginTop="1dp"
                android:id="@+id/contact_arrow"
                android:background="@drawable/arrow_down"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/snow_white">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                >
                <TextView
                    android:layout_width="40dp"
                    android:layout_height="35dp"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="5dp"
                    android:id="@+id/screenShot"
                    android:background="@drawable/scissor_icon"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="6dp"
                    android:id="@+id/add"
                    android:text="@string/add"
                    android:textSize="18sp"
                    android:textColor="@color/text_gray"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@id/add"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="6dp"
                    android:id="@+id/cancel"
                    android:text="@string/cancel"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:clickable="true"
                    />

            </RelativeLayout>
        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>
